# sortext

./: .coveragerc  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
docs/: implementation_document.md  instructions.md  specification.md  testing_document.md  week_report_1.md  week_report_2.md  week_report_3.md  week_report_4.md  week_report_5.md  week_report_6.md
src/: app.py  dataset.py  dataset_reader.py  k_means.py  term_document_matrix.py  text_preprocess.py  text_preprocessor.py
src/tests/: dataset_reader_test.py  dataset_test.py  k_means_test.py  term_document_matrix_test.py  text_preprocess_test.py
src/ui/: commands.py  interface.py
