[tool.poetry]
name = "sortext"
version = "0.1.0"
description = ""
authors = ["Samu Syrjänen <samu.syrjanen@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.8.1"
invoke = "^2.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
coverage = "^7.2.5"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
